orquestrador-lista-contrato/infra/network-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: orquestrador-lista-contrato-service
  namespace: estudos
  labels:
    app: orquestrador-lista-contrato
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: orquestrador-lista-contrato
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: orquestrador-lista-contrato-destinationrule
  namespace: estudos
spec:
  host: orquestrador-lista-contrato-service.estudos.svc.cluster.local
  subsets:
    - name: pf-v1
      labels:
        version: "release-1.0.1"
        service-mesh: pf
    - name: pj-v1
      labels:
        version: "release-1.0.1"
        service-mesh: pj
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orquestrador-lista-contrato-vs
  namespace: estudos
spec:
  gateways:
    - estudos/orquestrador-lista-contrato-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: "/estudos"
          headers:
            service-mesh:
              exact: pf
      rewrite:
        uri: " "
      route:
        - destination:
            host: orquestrador-lista-contrato-service.estudos.svc.cluster.local
            subset: pf-v1
          weight: 100
    - match:
        - uri:
            prefix: "/estudos"
          headers:
            service-mesh:
              exact: pj
      rewrite:
        uri: " "
      route:
        - destination:
            host: orquestrador-lista-contrato-service.estudos.svc.cluster.local
            subset: pj-v1
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orquestrador-lista-contrato-gateway
  namespace: estudos
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
        - '*'
      port:
        name: httpKiali
        number: 90
        protocol: HTTP
