orquestrador-lista-contrato/infra/vs-kiali.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtualservice
  namespace: istio-system
spec:
  gateways:
    - estudos/orquestrador-lista-contrato-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
